# pandak8s

./: .gitignore  README.md  aws.error  backend.dockerfile  build.sh  frontend.dockerfile  liam  nlb  package-lock
.github/actions/docker-build-push/: action.yaml
.github/workflows/: cicd.yaml
app/: docker-compose.yaml
app/api/: Makefile  README.md  k8s_client.py  main.py  pyproject.toml
app/backend/: Dockerfile  Makefile  README.md  k8s_client.py  logger.py  main.py  models.py  pyproject.toml
app/frontend/: Dockerfile  Makefile  README.md  nginx.conf  package.json
app/frontend/src/: App.tsx
app/frontend/src/components/: Layout.tsx  NamespaceDropdown.tsx
app/frontend/src/pages/: Deployments.tsx  Graph.tsx  Index.tsx  Pods.tsx  Services.tsx
app/frontend/src/utils/: formatters.tsx
app/web/: Dockerfile  Makefile  README.md  index.html  nginx.conf  package-lock.json
app/web/src/: App.tsx
pandak8s/: Chart.yaml  values.yaml
pandak8s/templates/: ingress.yaml  nginx-namespace.yaml
pandak8s/templates/backend/: backend-clusterrole.yaml  backend-clusterrolebinding.yaml  deployment.yaml  kube-system-role.yaml  kube-system-rolebinding.yaml  service.yaml  serviceaccount.yaml
pandak8s/templates/frontend/: deployment.yaml  service.yaml
scripts/: update_route53.sh
terraform/: Makefile  main.tf  outputs.tf  provider.tf  variables.tf
terraform/envs/: dev.tfvars
terraform/manifests/: pandak8s-app.yaml
terraform/modules/alb-irsa/: main.tf  outputs.tf  variables.tf
terraform/modules/github-action/: main.tf  outputs.tf  variables.tf
(+4 files in other folders)
