[tool.poetry]
name = "pandak8s-api"
version = "0.0.1"
description = "A Flask-based API to view Kubernetes Deployments, Pods, and Services in a given namespace"
authors = ["TomBrov <tbrovy@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
app = "main:app"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
kubernetes = "^27.2.0"
flask-cors = "^6.0.0"
flasgger = "^0.9.7.1"
marshmallow = "^4.0.0"
marshmallow-jsonschema = "^0.13.0"
setuptools = "^80.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"